--- a/index.html
+++ b/index.html
@@ -9,16 +9,99 @@
 	
 	<!-- Fonts, icons and scripts -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/styles.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/common.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/homepage.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/nav.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/footer.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/helpers.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/media-queries.css"/>
 </head>
 
 
 <body>
 
 
+	<div class="navigation-wrapper">
+		<div class="banner-image">
+			<img src="images/boxer.png" alt="Logo">
+		</div>
+		<div class="links-wrapper">
+			<div class="nav-link">
+				<a href="index.html">Home</a>
+			</div>
+			<div class="nav-link">
+				<a href="about.html">About</a>
+			</div>
+			<div class="nav-link">
+				<a href="menu.html">Menu</a>
+			</div>
+			<div class="nav-link">
+				<a href="contact.html">Contact</a>
+			</div>
+		</div>		
+	</div>
 	
+	
+	<div class="hero-section">
+		<div class="top-heading">
+			<h1>HTML Styled Fries</h1>
+		</div>
+		
+		<div class="bottom-heading">
+			<h3>Coding fuel</h3>
+		</div>
+	</div>
+	
+	<div class="features-section">
+		<div class="columns-wrapper">
+			<div class="column">
+				<i class="fas fa-truck-monster"></i>
+				<p>We Deliver</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+			</div>
+			<div class="column">
+				<i class="fas fa-wifi"></i>
+				<p>You can code from here!</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+			</div>
+			<div class="column">
+				<i class="fas fa-chart-line"></i>
+				<p>100+ types of fries!</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+			</div>
+		</div>
+	</div>
+	
+	<div class="footer">
+		<div class="logo-footer">
+			<img src="images/boxer.png" alt="Logo">
+		</div>		
+		<div class="links-wrapper">
+			<div class="nav-link">
+				<a href="index.html">Home</a>
+			</div>
+			<div class="nav-link">
+				<a href="about.html">About</a>
+			</div>
+			<div class="nav-link">
+				<a href="menu.html">Menu</a>
+			</div>
+			<div class="nav-link">
+				<a href="contact.html">Contact</a>
+			</div>
+		</div>
+		
+		<div class="copyright-wrapper">
+			&copy; 2018 DevCamp &#124; All rights reserved
+		</div>
+		
+	</div>
 
 
 </body>
+
+
+</html>
