--- a/index.html
+++ b/index.html
@@ -33,17 +33,13 @@
 				<a href="index.html">Home</a>
 			</div>
 			<div class="nav-link">
-				<a href="about.html">About</a>
+				<a href="projects.html">Projects</a>
 			</div>
 			<div class="nav-link">
-				<a href="menu.html">Menu</a>
-			</div>
-			<div class="nav-link">
-				<a href="contact.html">Contact</a>
+				<a href="links.html">Links</a>
 			</div>
 		</div>		
 	</div>
-	
 	
 	<div class="hero-section">
 		<div class="top-heading">
@@ -93,11 +89,9 @@
 				<a href="contact.html">Contact</a>
 			</div>
 		</div>
-		
 		<div class="copyright-wrapper">
 			&copy; 2018 DevCamp &#124; All rights reserved
 		</div>
-		
 	</div>
 
 
