--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<div class="banner-image">
 			<img src="images/boxer.png" alt="Logo">
 		</div>
+		<div class="big-name">
+			<h1>Yoshi Gamer 360</h1>
+		</div>
 		<div class="links-wrapper">
 			<div class="nav-link">
 				<a href="index.html">Home</a>
@@ -38,7 +41,7 @@
 			<div class="nav-link">
 				<a href="links.html">Links</a>
 			</div>
-		</div>		
+		</div>
 	</div>
 	
 	<div class="hero-section">
@@ -74,19 +77,16 @@
 	<div class="footer">
 		<div class="logo-footer">
 			<img src="images/boxer.png" alt="Logo">
-		</div>		
+		</div>
 		<div class="links-wrapper">
 			<div class="nav-link">
 				<a href="index.html">Home</a>
 			</div>
 			<div class="nav-link">
-				<a href="about.html">About</a>
+				<a href="projects.html">Projects</a>
 			</div>
 			<div class="nav-link">
-				<a href="menu.html">Menu</a>
-			</div>
-			<div class="nav-link">
-				<a href="contact.html">Contact</a>
+				<a href="links.html">Links</a>
 			</div>
 		</div>
 		<div class="copyright-wrapper">
