--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/common.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/homepage.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/nav.css"/>
@@ -25,51 +25,54 @@
 
 
 	<div class="navigation-wrapper">
-		<div class="banner-image">
-			<img src="images/boxer.png" alt="Logo">
-		</div>
-		<div class="big-name">
-			<h1>Yoshi Gamer 360</h1>
-		</div>
-		<div class="links-wrapper">
-			<div class="nav-link">
-				<a href="index.html">Home</a>
+		<div class="left-column">
+			<div class="banner-image">
+				<img src="images/boxer.png" alt="Logo">
 			</div>
-			<div class="nav-link">
-				<a href="projects.html">Projects</a>
+		</div>
+		<div class="center-column">
+			<div class="big-name">
+				<h1>Yoshi Gamer 360</h1>
 			</div>
-			<div class="nav-link">
-				<a href="links.html">Links</a>
+		</div>
+		<div class="right-column">
+			<div class="links-wrapper">
+				<div class="nav-link">
+					<a href="index.html">Home</a>
+				</div>
+				<div class="nav-link">
+					<a href="projects.html">Projects</a>
+				</div>
+				<div class="nav-link">
+					<a href="links.html">Links</a>
+				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="hero-section">
-		<div class="top-heading">
-			<h1>HTML Styled Fries</h1>
-		</div>
 		
 		<div class="bottom-heading">
-			<h3>Coding fuel</h3>
+			<h3>Made in python turtle</h3>
 		</div>
 	</div>
 	
 	<div class="features-section">
 		<div class="columns-wrapper">
 			<div class="column">
-				<i class="fas fa-truck-monster"></i>
-				<p>We Deliver</p>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+				<i class="fa-solid fa-laptop"></i>
+				<h3>Coding</h3>
+				<p>The first language I learnt was Python then I tried to learn HTML, CSS, C++ and SQl which are way to many things to try at once.</p>
 			</div>
 			<div class="column">
-				<i class="fas fa-wifi"></i>
-				<p>You can code from here!</p>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+				<i class="fa-solid fa-gamepad"></i>
+				<h3>Game dev</h3>
+				<p>My passion started in Scratch where I made simple games. Later I made games using pygame and I hope to make some in C++.</p>
 			</div>
 			<div class="column">
-				<i class="fas fa-chart-line"></i>
-				<p>100+ types of fries!</p>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+				<i class="fa-solid fa-robot"></i>
+				<h3>Robotics</h3>
+				<p>I have played with lego for as long as I can remember and now I try to challenge myself to make vehicles that are unusual.</p>
 			</div>
 		</div>
 	</div>
