--- a/menu.html
+++ b/menu.html
@@ -26,27 +26,23 @@
 
 
 	<div class="skewed-header">	
-		<div class="header-bg" style="background-image: url('images/backgrounds/menu.jpg');"></div>		
+		<div class="header-bg" style="background-image: url('images/coding-background.jpg');"></div>		
 		<div class="skewed-header-wrapper">
 			<div class="skewed-header-content">
 				<div class="heading-wrapper">
 					<h1>Menu</h1>
 				</div>
-				
 				<div class="links-wrapper">
 					<div class="nav-link">
 						<a href="index.html">Home</a>
 					</div>
 					<div class="nav-link">
-						<a href="about.html">About</a>
+						<a href="projects.html">Projects</a>
 					</div>
 					<div class="nav-link">
-						<a href="menu.html">Menu</a>
+						<a href="links.html">Links</a>
 					</div>
-					<div class="nav-link">
-						<a href="contact.html">Contact</a>
-					</div>
-				</div>				
+				</div>		
 			</div>				
 		</div>		
 	</div>
@@ -55,22 +51,22 @@
 		<div class="squares">
 			<div class="square">
 				<div class="img-wrapper">
-					<img src="images/squares/fries-sq-1.jpg" alt="fries">
+					<img src="images/aeldari-army-planner.png" alt="aeldari army planner">
 				</div>
 				<div class="square-text-wrapper">
-					<a href="#spicy" name="spicy" class="anchor-link">
-						<h1>Spicy</h1>
+					<a href="projects/aeldari-army-planner.html" class="project-name-link">
+						<h1>Aeldari Army Planner</h1>
 					</a>
 					<ul>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
+						<li>A project in a website called Replit</li>
+						<li>It allows you to create your own Eldar army for Warhammer 40k</li>
+						<li>It saves your army to the replit database</li>
 					</ul>
 				</div>
 			</div>
 			<div class="square">
 				<div class="square-text-wrapper">
-					<a href="#medium" name="medium" class="anchor-link">
+					<a href="projects/aeldari-army-planner.html" class="project-name-link">
 						<h1>Medium</h1>
 					</a>
 					<ol>
@@ -80,15 +76,15 @@
 					</ol>
 				</div>
 				<div class="img-wrapper">
-					<img src="images/squares/fries-sq-2.jpg" alt="fries">
+					<img src="images/aeldari-army-planner.png" alt="fries">
 				</div>
 			</div>
 			<div class="square">
 				<div class="img-wrapper">
-					<img src="images/squares/fries-sq-1.jpg" alt="fries">
+					<img src="images/aeldari-army-planner.png" alt="fries">
 				</div>
 				<div class="square-text-wrapper">
-					<a href="#Mild" name="Mild" class="anchor-link">
+					<a href="projects/aeldari-army-planner.html" class="project-name-link">
 						<h1>Mild</h1>
 					</a>
 					<ul>
@@ -100,7 +96,7 @@
 			</div>
 			<div class="square">
 				<div class="square-text-wrapper">
-					<a href="#plain" name="plain" class="anchor-link">
+					<a href="projects/aeldari-army-planner.html" class="project-name-link">
 						<h1>Plain</h1>
 					</a>
 					<ol>
@@ -110,58 +106,31 @@
 					</ol>
 				</div>
 				<div class="img-wrapper">
-					<img src="images/squares/fries-sq-2.jpg" alt="fries">
+					<img src="images/aeldari-army-planner.png" alt="fries">
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="spacer60"></div>
 
 	<div class="footer">
-
 		<div class="logo-footer">
-			<img src="images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+			<img src="images/boxer.png" alt="Logo">
 		</div>
-		
-		<div class="footer-phone-hours">
-			<span class="phone">
-				555 555 5555
-			</span>
-			<span class="hours">
-				10 am - midnight
-			</span>
-		</div>
-		
 		<div class="links-wrapper">
 			<div class="nav-link">
 				<a href="index.html">Home</a>
 			</div>
 			<div class="nav-link">
-				<a href="about.html">About</a>
+				<a href="projects.html">Projects</a>
 			</div>
 			<div class="nav-link">
-				<a href="menu.html">Menu</a>
-			</div>
-			<div class="nav-link">
-				<a href="contact.html">Contact</a>
+				<a href="links.html">Links</a>
 			</div>
 		</div>
-		
-		<div class="social-media-icons-wrapper">
-			<a href="#">
-				<i class="fab fa-instagram"></i>
-			</a>
-			<a href="#">
-				<i class="fab fa-twitter"></i>
-			</a>
-			<a href="#">
-				<i class="fab fa-facebook-f"></i>
-			</a>
-		</div>
-		
 		<div class="copyright-wrapper">
 			&copy; 2018 DevCamp &#124; All rights reserved
 		</div>
-		
 	</div>
 	
 	
