--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="column">
 				<i class="fa-solid fa-robot"></i>
 				<h3>Robotics</h3>
-				<p>I have played with lego for as long as I can remember and now I try to challenge myself to make vehicles that are unusual.</p>
+				<p>I have played with lego for as long as I can remember and now I try to challenge myself to make mechanisms out of parts.</p>
 			</div>
 		</div>
 	</div>
@@ -93,7 +93,7 @@
 			</div>
 		</div>
 		<div class="copyright-wrapper">
-			&copy; 2018 DevCamp &#124; All rights reserved
+			&copy; 2024 Yoshi Gamer 360 &#124; All rights reserved
 		</div>
 	</div>
 
