--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-	<title>Menu</title>
+	<title>Projects</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!-- Fonts, icons and scripts -->
@@ -30,7 +30,7 @@
 		<div class="skewed-header-wrapper">
 			<div class="skewed-header-content">
 				<div class="heading-wrapper">
-					<h1>Menu</h1>
+					<h1>Projects</h1>
 				</div>
 				<div class="links-wrapper">
 					<div class="nav-link">
@@ -51,10 +51,10 @@
 		<div class="squares">
 			<div class="square">
 				<div class="img-wrapper">
-					<img src="images/aeldari-army-planner.png" alt="aeldari army planner">
+					<img src="images/aeldari-army-planner.png" alt="list of eldar army">
 				</div>
 				<div class="square-text-wrapper">
-					<a href="projects/aeldari-army-planner.html" class="project-name-link">
+					<a href="https://github.com/Yoshigamer360/Aeldari-Army-Planner" target="_blank" class="project-name-link">
 						<h1>Aeldari Army Planner</h1>
 					</a>
 					<ul>
@@ -66,51 +66,54 @@
 			</div>
 			<div class="square">
 				<div class="square-text-wrapper">
-					<a href="projects/aeldari-army-planner.html" class="project-name-link">
-						<h1>Medium</h1>
+					<a href="https://github.com/Yoshigamer360/Time-perception-calculator" target="_blank" class="project-name-link">
+						<h1>Time perception calculator</h1>
 					</a>
-					<ol>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-					</ol>
+					<ul>
+						<li>As you grow up, time seems to pass faster</li>
+						<li>One of the reasons is that you are having less new experiences</li>
+						<li>Another reason is that a time period like 1 month is a smaller fraction of your life now than when you were 5 years old.</li>
+						<li>This program calculates what time period we feel now is the same as a set time period we felt at a set age.
+						<li>For example "As a 7 years old, 3 months feels as long as 6.857142857142857 months feels for me as a 16 year old"</li>
+					</ul>
 				</div>
 				<div class="img-wrapper">
-					<img src="images/aeldari-army-planner.png" alt="fries">
+					<img src="images/time-perception.png" alt="example of the calculator">
 				</div>
 			</div>
 			<div class="square">
 				<div class="img-wrapper">
-					<img src="images/aeldari-army-planner.png" alt="fries">
+					<img src="images/tron-360.png" alt="list of eldar army">
 				</div>
 				<div class="square-text-wrapper">
-					<a href="projects/aeldari-army-planner.html" class="project-name-link">
-						<h1>Mild</h1>
+					<a href="https://github.com/Yoshigamer360/Tron-360" target="_blank" class="project-name-link">
+						<h1>Tron 360</h1>
 					</a>
 					<ul>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
+						<li>A remake of the classic arcade game Tron</li>
+						<li>Made using pygame</li>
+						<li>Infinite rounds to play!</li>
 					</ul>
 				</div>
 			</div>
 			<div class="square">
 				<div class="square-text-wrapper">
-					<a href="projects/aeldari-army-planner.html" class="project-name-link">
-						<h1>Plain</h1>
+					<a href="https://github.com/Yoshigamer360/Snake-360" target="_blank" class="project-name-link">
+						<h1>Snake 360</h1>
 					</a>
-					<ol>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-						<li>Good and bad and good and bad</li>
-					</ol>
+					<ul>
+						<li>Remake of the game snake</li>
+						<li>Made using pygame</li>
+						<li>Has 3 different styles</li>
+					</ul>
 				</div>
 				<div class="img-wrapper">
-					<img src="images/aeldari-army-planner.png" alt="fries">
+					<img src="images/snake-360.png" alt="pics">
 				</div>
 			</div>
 		</div>
 	</div>
+	
 	<div class="spacer60"></div>
 
 	<div class="footer">
@@ -129,12 +132,10 @@
 			</div>
 		</div>
 		<div class="copyright-wrapper">
-			&copy; 2018 DevCamp &#124; All rights reserved
+			&copy; 2024 Yoshi Gamer 360 &#124; All rights reserved
 		</div>
 	</div>
 	
 	
 </body>
-
-
 </html>
