--- a/index.html
+++ b/index.html
@@ -1,104 +1,44 @@
-<!DOCTYPE html>
-<html>
+.skewed-header {
+	position: relative;
+	height: 400px;
+	overflow: hidden;
+}
 
+.skewed-header > .header-bg {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	transform: skewY(-6deg);
+	transform-origin: top left;
+	filter: brightness(50%);
+}
 
-<head>
-    <meta charset="UTF-8">
-	<title>Homepage</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<!-- Fonts, icons and scripts -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/common.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/homepage.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/nav.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/footer.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/helpers.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/media-queries.css"/>
-</head>
+.skewed-header > .skewed-header-wrapper {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	width: 100vw;
+}
 
+.skewed-header > .skewed-header-wrapper > .skewed-header-content {
+	width: 1000px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
 
-<body>
-
-
-	<div class="navigation-wrapper">
-		<div class="left-column">
-			<div class="banner-image">
-				<img src="images/boxer.png" alt="Logo">
-			</div>
-		</div>
-		<div class="center-column">
-			<div class="big-name">
-				<h1>Yoshi Gamer 360</h1>
-			</div>
-		</div>
-		<div class="right-column">
-			<div class="links-wrapper">
-				<div class="nav-link">
-					<a href="index.html">Home</a>
-				</div>
-				<div class="nav-link">
-					<a href="projects.html">Projects</a>
-				</div>
-				<div class="nav-link">
-					<a href="links.html">Links</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="hero-section">
-		
-		<div class="bottom-heading">
-			<h3>Made in python turtle</h3>
-		</div>
-	</div>
-	
-	<div class="features-section">
-		<div class="columns-wrapper">
-			<div class="column">
-				<i class="fa-solid fa-laptop"></i>
-				<h3>Coding</h3>
-				<p>The first language I learnt was Python then I tried to learn HTML, CSS, C++ and SQl which are way to many things to try at once.</p>
-			</div>
-			<div class="column">
-				<i class="fa-solid fa-gamepad"></i>
-				<h3>Game dev</h3>
-				<p>My passion started in Scratch where I made simple games. Later I made games using pygame and I hope to make some in C++.</p>
-			</div>
-			<div class="column">
-				<i class="fa-solid fa-robot"></i>
-				<h3>Robotics</h3>
-				<p>I have played with lego for as long as I can remember and now I try to challenge myself to make mechanisms out of parts.</p>
-			</div>
-		</div>
-	</div>
-	
-	<div class="footer">
-		<div class="logo-footer">
-			<img src="images/boxer.png" alt="Logo">
-		</div>
-		<div class="links-wrapper">
-			<div class="nav-link">
-				<a href="index.html">Home</a>
-			</div>
-			<div class="nav-link">
-				<a href="projects.html">Projects</a>
-			</div>
-			<div class="nav-link">
-				<a href="links.html">Links</a>
-			</div>
-		</div>
-		<div class="copyright-wrapper">
-			&copy; 2024 Yoshi Gamer 360 &#124; All rights reserved
-		</div>
-	</div>
-
-
-</body>
-
-
-</html>
+.skewed-header > .skewed-header-wrapper > .skewed-header-content > .heading-wrapper {
+	background-color: #ffde59;
+	color: #11122b;
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+	width: 175px;
+	padding: 10px;
+	text-align: center;
+}
