--- a/links.html
+++ b/links.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-	<title>Projects</title>
+	<title>Links</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!-- Fonts, icons and scripts -->
@@ -16,8 +16,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/nav.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/footer.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/skewed-header.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/square-grid.css"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="styles/helpers.css"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/links.css"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/media-queries.css"/>
 </head>
 
@@ -25,12 +24,12 @@
 <body>
 
 
-	<div class="skewed-header">	
-		<div class="header-bg" style="background-image: url('images/coding-background.jpg');"></div>		
+	<div class="skewed-header">
+		<div class="header-bg" style="background-image: url('images/coding-background.jpg');"></div>
 		<div class="skewed-header-wrapper">
 			<div class="skewed-header-content">
 				<div class="heading-wrapper">
-					<h1>Projects</h1>
+					<h1>Links</h1>
 				</div>
 				<div class="links-wrapper">
 					<div class="nav-link">
@@ -42,80 +41,26 @@
 					<div class="nav-link">
 						<a href="links.html">Links</a>
 					</div>
-				</div>		
-			</div>				
-		</div>		
+				</div>
+			</div>	
+		</div>
 	</div>
 	
-	<div class="squares-wrapper">
-		<div class="squares">
-			<div class="square">
-				<div class="img-wrapper">
-					<img src="images/aeldari-army-planner.png" alt="list of eldar army">
-				</div>
-				<div class="square-text-wrapper">
-					<a href="https://github.com/Yoshigamer360/Aeldari-Army-Planner" target="_blank" class="project-name-link">
-						<h1>Aeldari Army Planner</h1>
-					</a>
-					<ul>
-						<li>A project in a website called Replit</li>
-						<li>It allows you to create your own Eldar army for Warhammer 40k</li>
-						<li>It saves your army to the replit database</li>
-					</ul>
-				</div>
+	<div class="page-container">
+		<div class="columns-wrapper">
+			<div class="column">
+				<a href="https://github.com/Yoshigamer360" target="_blank">My Github account</a>
 			</div>
-			<div class="square">
-				<div class="square-text-wrapper">
-					<a href="https://github.com/Yoshigamer360/Time-perception-calculator" target="_blank" class="project-name-link">
-						<h1>Time perception calculator</h1>
-					</a>
-					<ul>
-						<li>As you grow up, time seems to pass faster</li>
-						<li>One of the reasons is that you are having less new experiences</li>
-						<li>Another reason is that a time period like 1 month is a smaller fraction of your life now than when you were 5 years old.</li>
-						<li>This program calculates what time period we feel now is the same as a set time period we felt at a set age.
-						<li>For example "As a 7 years old, 3 months feels as long as 6.857142857142857 months feels for me as a 16 year old"</li>
-					</ul>
-				</div>
-				<div class="img-wrapper">
-					<img src="images/time-perception.png" alt="example of the calculator">
-				</div>
+			<div class="column">
+				<a href="https://replit.com/@YoshiGamer360" target="_blank">My Replit account</a>
 			</div>
-			<div class="square">
-				<div class="img-wrapper">
-					<img src="images/tron-360.png" alt="list of eldar army">
-				</div>
-				<div class="square-text-wrapper">
-					<a href="https://github.com/Yoshigamer360/Tron-360" target="_blank" class="project-name-link">
-						<h1>Tron 360</h1>
-					</a>
-					<ul>
-						<li>A remake of the classic arcade game Tron</li>
-						<li>Made using pygame</li>
-						<li>Infinite rounds to play!</li>
-					</ul>
-				</div>
-			</div>
-			<div class="square">
-				<div class="square-text-wrapper">
-					<a href="https://github.com/Yoshigamer360/Snake-360" target="_blank" class="project-name-link">
-						<h1>Snake 360</h1>
-					</a>
-					<ul>
-						<li>Remake of the game snake</li>
-						<li>Made using pygame</li>
-						<li>Has 3 different styles</li>
-					</ul>
-				</div>
-				<div class="img-wrapper">
-					<img src="images/snake-360.png" alt="pics">
-				</div>
+			<div class="column">
+				<a href="https://scratch.mit.edu/users/MynamewithJ/" target="_blank">My Scratch account</a>
 			</div>
 		</div>
 	</div>
 	
-	<div class="spacer60"></div>
-
+	
 	<div class="footer">
 		<div class="logo-footer">
 			<img src="images/boxer.png" alt="Logo">
@@ -138,4 +83,6 @@
 	
 	
 </body>
+
+
 </html>
